Fix visual scrollbars bug

--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -18,7 +18,7 @@ body {
 // }
 
 .PdfAnnotator {
-  top: 64px;
+  height: calc(100vh - 64px);
 }
 
 
